# email-automation

./: .gitignore  .mcp.json  CLAUDE.md  Procfile  README.md  ROADMAP.md  Talent Email SOP (1).xlsx  pyproject.toml  railway.json  render.yaml  run.py  start.sh
.claude/: settings.local.json
Plans/: addressing-each-item-decision-enchanted-squid.md  addressing-each-item-decision-robust-whale.md  based-on-everything-in-tender-stonebraker.md  commit-1-diagnose-wild-dove.md  definitely-im-gonna-double-cozy-frog.md  hey-claude-i-updated-gentle-origami.md  kill-the-poller-immediately-fancy-wolf.md  ok-something-in-the-pure-journal.md  snuggly-twirling-pelican.md  talent-email-ai-guidelines-concurrent-wigderson.md  updated-morning-task-summary-snug-cherny.md
backend/: .env.example  __init__.py  main.py  requirements.txt
config/: confidence_policy.json  rollout_controls.json  settings.json
docs/: ADDING_A_TALENT.md  FAILURE_MODES.md  compliance_guardrails.md  failure_playbooks.md  n8n_setup.md  n8n_workflow_corrected.json  setup_checklist.md  sop_audit_report.md
make/: phase1_triage_scenario.json  phase2_reply_scenario.json  phase3_digest_scenario.json  phase4_error_alert_scenario.json  phase5_weekly_digest_scenario.json
prompts/: reply.md  triage.md
scripts/: check_anastasiya_drafts.py  dedup_gmail_drafts.py  generate_google_refresh_token.py  heartbeat.py  preflight_validator.js  purge_spam_sweep.py  run_poller.py
sheets/: Automated Send Workflow.md  master_log_template.csv  override_queue_template.csv  sop.docx  sop.md  sop_data.json  sop_matrix_template.csv
tests/: reply_test_cases.json  (+2 more)
(+96 files in other folders)
