[tool.poetry]
name = "email-automation"
version = "1.0.0"
description = "Talent Inbox Automation — multi-inbox polling, GPT drafting, unified review queue"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.111.0"
uvicorn = {version = "0.29.0", extras = ["standard"]}
sqlalchemy = "2.0.41"
psycopg2-binary = "2.9.11"
alembic = "1.13.1"
python-dotenv = "1.0.1"
httpx = "0.27.0"
google-auth = "2.29.0"
google-auth-oauthlib = "1.2.0"
google-auth-httplib2 = "0.2.0"
google-api-python-client = "2.128.0"
openai = "1.30.1"
gspread = "6.1.2"
gspread-dataframe = "4.0.0"
python-jose = {version = "3.4.0", extras = ["cryptography"]}
email-validator = "2.1.1"
pydantic-settings = "2.2.1"
apscheduler = "3.10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
